# ssl-uav-seg

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
notebooks/: benchmark_sample.ipynb  copy_paste.ipynb  copy_paste_inherit.ipynb  eda.ipynb  moco_sample.ipynb  run_training.ipynb  test_augmentation.ipynb  train.ipynb  uav_aug_sample.ipynb
src/: evaluate.py  main.py  train_deeplab_imagenet.py  train_deeplab_ssl.py  train_moco.py  train_unet.py  train_unet_imagenet.py  train_unet_random.py  train_unet_ssl.py
src/datasets/: __init__.py  albu_aug_helper.py  albu_wrapper.py  aug.py  copy_paste.py  moco_dataset.py  uav_data.py  uavid_labels.py
src/moco/: builder.py  train_moco.py
src/models/: __init__.py  unet.py  unet_base.py
src/notebooks/: eda.ipynb
src/test/: evaluate.py  summarize.py
src/utils/: __init__.py  copy_paste.py  metric.py  parse_results.py  plot.py  trainer.py  utils.py  visualization.py
