[project]
name = "ssl-uav-seg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "albumentations>=2.0.8",
    "gdown==5.2.0",
    "ipykernel==7.1.0",
    "ipython==9.7.0",
    "matplotlib==3.10.7",
    "matplotlib-inline==0.2.1",
    "missingno==0.5.2",
    "monai==1.5.1",
    "opencv-python-headless==4.12.0.88",
    "pandas==2.3.3",
    "pyyaml==6.0.3",
    "scikit-image==0.25.2",
    "scikit-learn==1.7.2",
    "segmentation-models-pytorch==0.5.0",
    "sync==1.0.0",
    "torch==2.9.0",
    "torchvision==0.24.0",
    "tqdm==4.67.1",
]
